gcc/testsuite/gm2/iso/const/fail/testchr.mod
MODULE testchr ;

CONST
   foo = ORD (CHR (c)) ;

VAR
   c: CARDINAL ;
BEGIN

END testchr.
